service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wsi-service
  namespace: wsi
spec:
  type: ClusterIP
  selector:
    app: wsi
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
