ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wsi-ingress
  namespace: wsi
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: wsi-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: wsi-service
                port:
                  number: 80
